--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,6 @@ dependencies {
 
     compile 'com.android.support:design:25.3.1'
     compile 'com.google.firebase:firebase-auth:11.2.0'
+    compile 'com.google.firebase:firebase-database:11.2.0'
 }
 apply plugin: 'com.google.gms.google-services'
